css/style.css
body, html
{
	background-image: url(images/pattern7.png) !important;
/*#DFB8A5    orange accent-4*/

}

.intro
{
	text-align: center;
	padding-top: 13%;
	padding-bottom: 13%;
	margin-bottom: 50px;
}

.intro h1
{
	font-weight: 900;
	text-transform: uppercase;
}

.intro h5
{
	text-transform: uppercase;
	background-color: #f5f5f5;
	padding: 10px;
	color: #333333;
	display: inline-block;
	font-size: 1.2rem;
}

.questions h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.questions h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.questions hr
{
	width: 40px;
	margin-bottom: 45px;
}

.about .col
{
	margin-bottom: 24px;
}

.about h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.about h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.about hr
{
	width: 40px;
	margin-bottom: 45px;
}

.about .card
{
	text-align: center;
}

.about .card img
{
	margin-bottom: 15px;
}

.portfolio .col
{
	margin-bottom: 24px;
}

.portfolio h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.portfolio h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.portfolio hr
{
	width: 40px;
	margin-bottom: 45px;
}

.portfolio .portfolio-holder
{
	clear: both;
	text-align: center;
}

.portfolio img
{
	width: 33%;
	display: inline-block;
	float: left;
}
.whos-involved h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.whos-involved h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.whos-involved hr
{
	width: 40px;
	margin-bottom: 45px;
}

.get-involved h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.get-involved h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.get-involved hr
{
	width: 40px;
	margin-bottom: 45px;
}


.contact .col
{
	margin-bottom: 24px;
}

.contact h5
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 15px;
}

.contact h6
{
	text-align: center;
	text-transform: uppercase;
	margin-bottom: 45px;
}

.contact hr
{
	width: 40px;
	margin-bottom: 45px;
}

.contact .contact-holder
{
	padding-left: 40px;
	text-align: left;
}

.contact .contact-holder h6
{
	margin-bottom: 15px;
	text-align: left;
}

.contact .contact-holder p
{
	margin-bottom: 30px;
}
footer
{
	padding-top: 0px;
}

#expense {
	margin: auto;
	margin-top: 40%;

}


/*!!!MOBILE VIEW STRICT CSS!!!*/
@media screen and (min-width: 330px) {

	#homevideo {

		display: block;
		margin-top: 10%;
		margin-bottom: 10%;
	}

	#drop-nav {
		float: right;
		position: fixed;

		z-index: 1;
		margin-top: -300px;
		margin-left: 80%;
	}



	#homefoot{
	 font-size: 1em;
	  text-align: center;
	  clear: both;
		margin-top: -20%;

	  color: #000;
	}
	#indexfoot{
	 font-size: 1em;
	  text-align: center;
	  clear: both;
		margin-top: 0;

	  color: #000;
	}

	#can1{
	 display: block;
	max-width: 100%;
	max-height: none;
	margin: auto;
	}

#needspace{
		text-align: center;
		margin-top: 40%;

}

#needspace2{
	margin-top: 100%;
}

#needspace3{
	margin-top: 25%;
}

#twitter{
	display: block;
float: left;
	margin: 0 0 0 -20px;
	width: 180px;
}
#twitter2{
	display: block;
float: right;
margin: 0 10px 0 0;
	width: 170px;
}

#facebook{


	display: inline-block;
	max-width: 100px;
}

#question{
	max-width: 300px;
}


}


/*!!!DESKTOP VIEW STRICT CSS!!!*/

@media screen and (min-width: 660px) {

	/*ADDED CSS STYLING*/

	#homefoot{
	 font-size: 1em;
		text-align: center;
		clear: both;
		margin-top: 0;
		color: #000;
	}

	#twitter{
		display: block;

		margin: auto;
		max-width: 90%;
	}
	#twitter2{
		display: block;
		float: right;
		margin: auto;
		max-width: 200px;
	}

	#homevideo {
		display:block;
		margin:auto;
		margin-top: 5%;
		margin-bottom: 7%;
	}

	#can1{
	 display: block;
	max-width: 820px;
	max-height: 488px;

	}

	#needspace{
			margin-top: 10%;
	}


}

/*!!!CONTACT US CSS!!!*/



body {
  font: 16px Helvetica;

}

.contactcontainer {
  width: 100%;
  margin: 2em auto;
  overflow: hidden;
  background: black !important;
  border-radius: 5px;
}

.message, .contact, .name, .footer, header, footer, textarea {
  display: block;
  padding: 0;
  margin: 0;
  border: 0;
  clear: both;
  overflow: hidden;
}

#contactheader {
  height: 75px;
  background: rgba(0, 0, 0, 0.05);
  line-height: 75px;
  padding-left: 20px;
  border-radius: 5px 5px 0 0;
}

#contactfooter {
  height: 75px;
  background: rgba(0, 0, 0, 0.05);
  line-height: 75px;
  padding-left: 20px;
  border-radius: 5px 5px 0 0;
}
#contacth1 {
  font-size: 1.2em;
  text-transform: uppercase;
  color: rgba(51, 51, 51, 0.4);
}

.first, .last {
  float: left;
  width: 278px;
  margin: 0;
  padding: 0 0 0 20px;
  border: 1px solid rgba(0, 0, 0, 1);
  height: 50px;
}

.last {
  width: 279px;
  border-left: 0;
}

.email, textarea {
  height: 50px;
  width: 578px;
  line-height: 50px;
  padding: 0 0 0 20px;
  border-top: 0;
  border-left: 1px solid rgba(0, 0, 0, 0.1);
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

textarea {
  height: 200px;
}

#contactfooter {
  height: 49px;
  border-top: 1px dashed rgba(0, 0, 0, 0.3);
  border-radius: 0 0 5px 5px;
  padding-left: 0;
  padding-right: 20px;
}
#contactfooter button {
  height: 32px;
  background: #e74c3c;
  border-radius: 5px;
  border: 0;
  margin: 7px 0;
  color: white;
  float: right;
  padding: 0 20px 0 20px;
  border-bottom: 3px solid #c0392b;
  transition: all linear .2s;
}
#contactfooter button:hover {
  background: #c0392b;
}
#contactfooter button:focus {
  outline: none;
}

.first:focus, .last:focus, .email:focus, textarea:focus, textarea:focus {
  outline: none;
  background: rgba(52, 152, 219, 0.1);
  color: rgba(51, 51, 51, 0.7);
}

